fix events on mobile

--- a/index.css
+++ b/index.css
@@ -623,6 +623,9 @@ footer span, footer a {
         display: block;
         margin-left: 20px;
     }
+    #splash {
+        margin-top: 100px;
+    }
     .splash-background video {
         width: 100%;
         height: 250px;
@@ -650,7 +653,7 @@ footer span, footer a {
         object-fit: contain;
         height: unset;
     }
-    .events-grid {
+    #events .grid {
         grid-template-columns: repeat(1, 1fr);
         width: unset;
     }
